tests/Fixtures/Torture/Bad/huge_int.g
// EXPECT G004
kernel { entry func Main() { let x = 999999999999999999999999; } }
